[gd_scene load_steps=18 format=2]

[ext_resource path="res://imagens/ceu.jpg" type="Texture" id=1]
[ext_resource path="res://cena_nave.tscn" type="PackedScene" id=2]
[ext_resource path="res://sons/Musica de fundo.wav" type="AudioStream" id=3]
[ext_resource path="res://script_fase.gd" type="Script" id=4]
[ext_resource path="res://recursos/imagens/Piloto.png" type="Texture" id=5]
[ext_resource path="res://recursos/imagens/Vida.png" type="Texture" id=6]
[ext_resource path="res://recursos/fonts/Kufam-VariableFont_wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://recursos/imagens/Missel.png" type="Texture" id=8]
[ext_resource path="res://recursos/imagens/Barricada.png" type="Texture" id=9]
[ext_resource path="res://cena_pausa.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 611.217, 103.196 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.25098, 0.729412, 0.184314, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.352941, 0.345098, 0.345098, 1 )
border_color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D"]
pause_mode = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.538, 300.203 )
scale = Vector2( 2.38032, 1.22335 )
texture = ExtResource( 1 )

[node name="Aviao" parent="." instance=ExtResource( 2 )]
position = Vector2( 449.026, 472.061 )
scale = Vector2( 0.92, 0.906953 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0

[node name="Piloto" type="Sprite" parent="."]
position = Vector2( 58.3316, 50.0191 )
scale = Vector2( 0.223375, 0.223375 )
texture = ExtResource( 5 )

[node name="Vida1" type="Sprite" parent="."]
position = Vector2( 110.986, 52.74 )
scale = Vector2( 0.369618, 0.369618 )
texture = ExtResource( 6 )

[node name="Vida2" type="Sprite" parent="."]
position = Vector2( 154.986, 52.74 )
scale = Vector2( 0.369618, 0.369618 )
texture = ExtResource( 6 )

[node name="Vida3" type="Sprite" parent="."]
position = Vector2( 200.121, 52.74 )
scale = Vector2( 0.369618, 0.369618 )
texture = ExtResource( 6 )

[node name="Missel" type="Sprite" parent="."]
position = Vector2( 345.669, 58.6045 )
scale = Vector2( 0.276145, 0.14334 )
texture = ExtResource( 8 )

[node name="QtdMissel" type="Label" parent="."]
margin_left = 249.451
margin_top = 28.5088
margin_right = 314.451
margin_bottom = 83.5088
custom_fonts/font = SubResource( 1 )
text = "0 X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QtdTempo" type="Label" parent="."]
margin_left = 494.441
margin_top = 28.4678
margin_right = 534.441
margin_bottom = 42.4678
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QtdPonto" type="Label" parent="."]
margin_left = 752.243
margin_top = 24.1716
margin_right = 942.243
margin_bottom = 79.1716
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pontos: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barreira" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Barreira"]
position = Vector2( 342.699, 604.762 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Barreira"]
position = Vector2( 798.79, 602.242 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="Barreira"]
position = Vector2( 1252.36, 602.242 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira"]
position = Vector2( 545.953, 658.532 )
shape = SubResource( 4 )

[node name="VidaBarreira" type="ProgressBar" parent="."]
margin_left = 7.0
margin_top = 476.0
margin_right = 201.0
margin_bottom = 499.0
theme = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 5.0
step = 1.0
value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempoInimigo" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TempoJogo" type="Timer" parent="."]
wait_time = 59.0
autostart = true

[node name="Pausa" parent="." instance=ExtResource( 10 )]
visible = false
z_index = 1
[connection signal="timeout" from="TempoInimigo" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TempoJogo" to="." method="_on_TempoJogo_timeout"]
